# cmake_test

./: CMakeLists.txt  README.md
include/: dup.h
src/: add.cpp  dup.cpp  int.cpp  main.cpp
